Resolvendo z-index modal

--- a/pages/Components/Modal/styles.module.css
+++ b/pages/Components/Modal/styles.module.css
@@ -8,6 +8,7 @@
   display: flex;
   justify-content: center;
   backdrop-filter: blur(4px);
+  z-index: 1;
 }
 
 .modal_content {
